--- a/SpaceInvaders/Framework/Framework.vcxproj
+++ b/SpaceInvaders/Framework/Framework.vcxproj
@@ -85,7 +85,7 @@
     <ClInclude Include="backbuffer.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="entity.h" />
-    <ClInclude Include="explosion.h" />
+    <ClInclude Include="AnimEntity.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="bullet.h" />
     <ClInclude Include="inputhandler.h" />
@@ -101,7 +101,7 @@
     <ClCompile Include="backbuffer.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="entity.cpp" />
-    <ClCompile Include="explosion.cpp" />
+    <ClCompile Include="AnimEntity.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="inputhandler.cpp" />
     <ClCompile Include="logmanager.cpp" />
