--- a/SpaceInvaders/Framework/Framework.vcxproj
+++ b/SpaceInvaders/Framework/Framework.vcxproj
@@ -53,13 +53,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)\SDL\SDL2-2.0.3\include\;$(SolutionDir)\SDL\SDL2_image-2.0.0\include;$(SolutionDir)\FMOD\inc\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\SDL\SDL2-2.0.3\include\;$(SolutionDir)\SDL\SDL2_image-2.0.0\include;$(SolutionDir)\FMOD\inc\;$(SolutionDir)\SDL2_ttf-2.0.14\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\SDL\SDL2-2.0.3\lib\x86;$(SolutionDir)\SDL\SDL2_image-2.0.0\lib\x86;$(SolutionDir)\FMOD\lib\</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies);fmodl_vc.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\SDL\SDL2-2.0.3\lib\x86;$(SolutionDir)\SDL\SDL2_image-2.0.0\lib\x86;$(SolutionDir)\FMOD\lib\;$(SolutionDir)\SDL2_ttf-2.0.14\lib\x86</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies);fmodl_vc.lib;SDL2_ttf.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -91,7 +91,7 @@
     <ClInclude Include="inputhandler.h" />
     <ClInclude Include="logmanager.h" />
     <ClInclude Include="Parser.h" />
-    <ClInclude Include="PlayerShip.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="SoundSystem.h" />
     <ClInclude Include="sprite.h" />
     <ClInclude Include="texture.h" />
@@ -108,7 +108,7 @@
     <ClCompile Include="logmanager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Parser.cpp" />
-    <ClCompile Include="PlayerShip.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="bullet.cpp" />
     <ClCompile Include="SoundSystem.cpp" />
     <ClCompile Include="sprite.cpp" />
