Implemented InputRouter method and Input Enum
input Enum is passed to the inputrouter function to evaluate what is
the input and during what state of the game it is used to determine
what and what cant the player do

--- a/SpaceInvaders/Framework/Framework.vcxproj
+++ b/SpaceInvaders/Framework/Framework.vcxproj
@@ -87,6 +87,7 @@
     <ClInclude Include="entity.h" />
     <ClInclude Include="AnimEntity.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="InputControls.h" />
     <ClInclude Include="inputhandler.h" />
     <ClInclude Include="logmanager.h" />
     <ClInclude Include="Parser.h" />
