--- a/SpaceInvaders/Framework/Framework.vcxproj.filters
+++ b/SpaceInvaders/Framework/Framework.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="Player.h">
       <Filter>Header Files\Entity</Filter>
     </ClInclude>
+    <ClInclude Include="InputControls.h">
+      <Filter>Header Files\Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
