Spawn coins and animation
 - Spawning using the same algorithm as spawning random enemies

--- a/SpaceInvaders/Framework/Framework.vcxproj
+++ b/SpaceInvaders/Framework/Framework.vcxproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <ClInclude Include="AnimatedSprite.h" />
     <ClInclude Include="backbuffer.h" />
+    <ClInclude Include="Coin.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="entity.h" />
     <ClInclude Include="AnimEntity.h" />
@@ -100,6 +101,7 @@
   <ItemGroup>
     <ClCompile Include="AnimatedSprite.cpp" />
     <ClCompile Include="backbuffer.cpp" />
+    <ClCompile Include="Coin.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="entity.cpp" />
     <ClCompile Include="AnimEntity.cpp" />
