--- a/SpaceInvaders/Framework/Framework.vcxproj.filters
+++ b/SpaceInvaders/Framework/Framework.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="InputControls.h">
       <Filter>Header Files\Game</Filter>
     </ClInclude>
+    <ClInclude Include="Coin.h">
+      <Filter>Header Files\Entity</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -123,6 +126,9 @@
       <Filter>Source Files\Game</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
+      <Filter>Source Files\Entity</Filter>
+    </ClCompile>
+    <ClCompile Include="Coin.cpp">
       <Filter>Source Files\Entity</Filter>
     </ClCompile>
   </ItemGroup>
