implemented animated sprite as player
- removed player entity in game
- player interactions are needed to be implemented to the animated
sprite

--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -1,1 +1,30 @@
-{"max_speed":10,"min_speed":1, "sprite_loc":"assets\\alienenemy.png"}
+{
+	"enemy": {
+			"sprite_loc":"assets\\alienenemy.png",
+			"max_speed":10,
+			"min_speed":1
+			
+	},
+	"player": {
+		"sprite_loc":"AnimationAssets\\coin.png", 
+		"health": 100,
+		"max_speed":10,
+		"speed": 7,
+		"min_speed":1,
+		"num_frames": 3, 
+		"frame_speed": 0.1, 
+		"frame_width": 75,
+		"frame_height": 50,
+		"looping" : true
+
+	},
+	"coin": {
+		"sprite_loc":"AnimationAssets\\coin.png", 
+		"num_frames": 9, 
+		"frame_speed": 0.1, 
+		"frame_width": 50,
+		"frame_height": 50,
+		"looping" : true
+
+	}
+}
