Coins speed up over time of life time

--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -15,7 +15,8 @@
 		"frame_speed": 0.1, 
 		"frame_width": 75,
 		"frame_height": 50,
-		"looping" : true
+		"looping": true,
+		"damage_taken": 20
 
 	},
 	"coin": {
