--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -6,7 +6,7 @@
 			
 	},
 	"player": {
-		"sprite_loc":"AnimationAssets\\coin.png", 
+		"sprite_loc":"AnimationAssets\\playermed.png", 
 		"health": 100,
 		"max_speed":10,
 		"speed": 7,
@@ -20,11 +20,12 @@
 
 	},
 	"coin": {
-		"sprite_loc":"AnimationAssets\\coin.png", 
+		"sprite_loc":"AnimationAssets\\coinmed.png", 
 		"num_frames": 9, 
-		"frame_speed": 0.1, 
-		"frame_width": 50,
-		"frame_height": 50,
+		"frame_speed": 0.05,
+		"frame_width": 30,
+		"frame_height": 30,
+		"life_span": 5.0,
 		"looping" : true
 
 	}
