selecting one menu item
- changed collision variable to become a large circle averaged out by
the width and height of the two entities (in animentitiy class)

--- a/SpaceInvaders/Framework/Framework.vcxproj
+++ b/SpaceInvaders/Framework/Framework.vcxproj
@@ -90,6 +90,7 @@
     <ClInclude Include="game.h" />
     <ClInclude Include="InputControls.h" />
     <ClInclude Include="inputhandler.h" />
+    <ClInclude Include="MenuItem.h" />
     <ClInclude Include="logmanager.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="Player.h" />
@@ -109,6 +110,7 @@
     <ClCompile Include="inputhandler.cpp" />
     <ClCompile Include="logmanager.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MenuItem.cpp" />
     <ClCompile Include="Parser.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="SoundSystem.cpp" />
