--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -28,5 +28,13 @@
 		"life_span": 5.0,
 		"looping" : true
 
+	},
+	"menu_item": {
+		"sprite_loc":"AnimationAssets\\selectmed.png", 
+		"num_frames": 8,
+		"frame_speed": 0.1,
+		"frame_width": 300,
+		"frame_height": 267,
+		"looping" : true
 	}
 }
