--- a/SpaceInvaders/Framework/Framework.vcxproj.filters
+++ b/SpaceInvaders/Framework/Framework.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="Coin.h">
       <Filter>Header Files\Entity</Filter>
     </ClInclude>
+    <ClInclude Include="MenuItem.h">
+      <Filter>Header Files\Entity</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -129,6 +132,9 @@
       <Filter>Source Files\Entity</Filter>
     </ClCompile>
     <ClCompile Include="Coin.cpp">
+      <Filter>Source Files\Entity</Filter>
+    </ClCompile>
+    <ClCompile Include="MenuItem.cpp">
       <Filter>Source Files\Entity</Filter>
     </ClCompile>
   </ItemGroup>
