i frame logic implemented in check damage method

--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -16,7 +16,8 @@
 		"frame_width": 75,
 		"frame_height": 50,
 		"looping": true,
-		"damage_taken": 20
+		"damage_taken": 20,
+		"i_frame_time": 2.5
 
 	},
 	"coin": {
@@ -27,7 +28,6 @@
 		"frame_height": 30,
 		"life_span": 5.0,
 		"looping" : true
-
 	},
 	"menu_item": {
 		"sprite_loc":"AnimationAssets\\selectmed.png", 
