--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -29,6 +29,14 @@
 		"life_span": 5.0,
 		"looping" : true
 	},
+	"explosion": {
+		"sprite_loc":"AnimationAssets\\explosion.png", 
+		"num_frames": 4, 
+		"frame_speed": 0.4,
+		"frame_width": 64,
+		"frame_height": 64,
+		"looping" : false
+	},
 	"menu_item": {
 		"sprite_loc":"AnimationAssets\\selectmed.png", 
 		"num_frames": 8,
