feed menu new sprite for player

--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -6,15 +6,15 @@
 			
 	},
 	"player": {
-		"sprite_loc":"AnimationAssets\\playermed.png", 
+		"sprite_loc":"AnimationAssets\\playerlrgw.png", 
 		"health": 100,
 		"max_speed":10,
 		"speed": 5,
 		"min_speed":1,
 		"num_frames": 3, 
 		"frame_speed": 0.1, 
-		"frame_width": 75,
-		"frame_height": 50,
+		"frame_width": 100,
+		"frame_height": 62,
 		"looping": true,
 		"damage_taken": 20,
 		"i_frame_time": 2.5
