--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -6,13 +6,13 @@
 			
 	},
 	"player": {
-		"sprite_loc":"AnimationAssets\\playerlrgw.png", 
+		"sprite_loc":"AnimationAssets\\playerlrge.png", 
 		"health": 100,
 		"max_speed":10,
 		"speed": 5,
 		"min_speed":1,
 		"num_frames": 3, 
-		"frame_speed": 0.1, 
+		"frame_speed": 0.3, 
 		"frame_width": 100,
 		"frame_height": 62,
 		"looping": true,
