Scaling enemy spawning

--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -1,9 +1,11 @@
 {
 	"enemy": {
 			"sprite_loc":"assets\\alienenemy.png",
-			"max_speed":10,
-			"min_speed":1
-			
+			"max_speed":8,
+			"min_speed":1,
+			"ease_ratio": 10,
+			"difficulty_increase": 1,
+			"spawning_ticks": 20
 	},
 	"player": {
 		"sprite_loc":"AnimationAssets\\playerlrge.png", 
@@ -12,13 +14,12 @@
 		"speed": 5,
 		"min_speed":1,
 		"num_frames": 3, 
-		"frame_speed": 0.3, 
+		"frame_speed": 0.2, 
 		"frame_width": 100,
 		"frame_height": 62,
 		"looping": true,
 		"damage_taken": 20,
 		"i_frame_time": 2.5
-
 	},
 	"coin": {
 		"sprite_loc":"AnimationAssets\\coinmed.png", 
