fixed spawning randomly

--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -3,9 +3,10 @@
 			"sprite_loc":"assets\\alienenemy.png",
 			"max_speed":8,
 			"min_speed":1,
-			"ease_ratio": 10,
-			"difficulty_increase": 1,
-			"spawning_ticks": 20
+			"difficulty_increase_seconds": 5,
+			"difficulty_increase": 5,
+			"spawn_per_second": 1,
+			"spawn_amount_per_second": 1 
 	},
 	"player": {
 		"sprite_loc":"AnimationAssets\\playerlrge.png", 
@@ -13,7 +14,7 @@
 		"max_speed":10,
 		"speed": 5,
 		"min_speed":1,
-		"num_frames": 3, 
+		"num_frames": 3,
 		"frame_speed": 0.2, 
 		"frame_width": 100,
 		"frame_height": 62,
