animating enemies implemented
- enemy object is now sub class to animentity

--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -1,12 +1,17 @@
 {
 	"enemy": {
-			"sprite_loc":"assets\\alienenemy.png",
+			"sprite_loc":"AnimationAssets\\toast.png",
 			"max_speed":8,
 			"min_speed":1,
 			"difficulty_increase_seconds": 5,
 			"difficulty_increase": 5,
 			"spawn_per_second": 1,
-			"spawn_amount_per_second": 1 
+			"spawn_amount_per_second": 1,
+			"num_frames": 3, 
+			"frame_speed": 0.1,
+			"frame_width": 29,
+			"frame_height": 30,
+			"looping" : true
 	},
 	"player": {
 		"sprite_loc":"AnimationAssets\\playerlrge.png", 
