added menu sound

--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -51,5 +51,15 @@
 		"frame_width": 300,
 		"frame_height": 267,
 		"looping" : true
+	},
+	"sounds": {
+		"catA" : "sounds\\catA.wav",
+		"catB" : "sounds\\catHA.wav",
+		"catHit" : "sounds\\333916__thearxx08__cat-meowing.mp3",
+		"catDead" : "sounds\\222590__queen-westeros__cat-scream.wav",
+		"monster" : "sounds\\204610__pikachu09__monster-snarl-3.wav",
+		"menu" : "sounds\\235349__dambient__8-bit-loop.mp3",
+		"playing" : "sounds\\251461__joshuaempyre__arcade-music-loop",
+		"coin" : "sounds\\coin.wav"
 	}
 }
