added background and moved files to release

--- a/SpaceInvaders/Framework/data.ini
+++ b/SpaceInvaders/Framework/data.ini
@@ -59,7 +59,31 @@
 		"catDead" : "sounds\\222590__queen-westeros__cat-scream.wav",
 		"monster" : "sounds\\204610__pikachu09__monster-snarl-3.wav",
 		"menu" : "sounds\\235349__dambient__8-bit-loop.mp3",
-		"playing" : "sounds\\251461__joshuaempyre__arcade-music-loop",
+		"playing" : "sounds\\251461__joshuaempyre__arcade-music-loop.wav",
 		"coin" : "sounds\\coin.wav"
+	},
+	"plantA":{
+		"sprite_loc":"AnimationAssets\\flowerSprite.png",  
+		"num_frames": 4, 
+		"frame_speed": 0.11,
+		"frame_width": 20,
+		"frame_height": 23,
+		"looping" : true
+	},
+	"plantB":{
+		"sprite_loc":"AnimationAssets\\grassSprite.png",
+		"num_frames": 4, 
+		"frame_speed": 0.1,
+		"frame_width": 13,
+		"frame_height": 10,
+		"looping" : true
+	},
+		"butterfly":{
+		"sprite_loc2":"AnimationAssets\\butterflySprite.png", 
+		"num_frames": 6,
+		"frame_speed": 0.15,
+		"frame_width": 30,
+		"frame_height": 30,
+		"looping" : true
 	}
 }
