--- a/SpaceInvaders/Release/data.ini
+++ b/SpaceInvaders/Release/data.ini
@@ -51,5 +51,39 @@
 		"frame_width": 300,
 		"frame_height": 267,
 		"looping" : true
+	},
+	"sounds": {
+		"catA" : "sounds\\catA.wav",
+		"catB" : "sounds\\catHA.wav",
+		"catHit" : "sounds\\333916__thearxx08__cat-meowing.mp3",
+		"catDead" : "sounds\\222590__queen-westeros__cat-scream.wav",
+		"monster" : "sounds\\204610__pikachu09__monster-snarl-3.wav",
+		"menu" : "sounds\\235349__dambient__8-bit-loop.mp3",
+		"playing" : "sounds\\251461__joshuaempyre__arcade-music-loop.wav",
+		"coin" : "sounds\\coin.wav"
+	},
+	"plantA":{
+		"sprite_loc":"AnimationAssets\\flowerSprite.png",  
+		"num_frames": 4, 
+		"frame_speed": 0.11,
+		"frame_width": 20,
+		"frame_height": 23,
+		"looping" : true
+	},
+	"plantB":{
+		"sprite_loc":"AnimationAssets\\grassSprite.png",
+		"num_frames": 4, 
+		"frame_speed": 0.1,
+		"frame_width": 13,
+		"frame_height": 10,
+		"looping" : true
+	},
+		"butterfly":{
+		"sprite_loc2":"AnimationAssets\\butterflySprite.png", 
+		"num_frames": 6,
+		"frame_speed": 0.15,
+		"frame_width": 30,
+		"frame_height": 30,
+		"looping" : true
 	}
 }
